# vexrs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config  config.toml
.v5/: armv7a-vex-eabi.json
src/: alloc_a.rs  allocator.rs  arm.S  lib.rs  libv5rt.rs  main.rs  panic.rs  prelude.rs  print.rs  runtime.rs  serial.rs  task.rs  util.rs
src/hardware/: competition.rs  controller.rs  display.rs  mod.rs  serial.rs  timer.rs  util.rs
src/hardware/devices/: adi.rs  manager.rs  mod.rs  smart.rs
src/hardware/devices/adi/: encoder.rs  mod.rs
src/hardware/devices/smart/: mod.rs  motor.rs
src/runtime/: internal.rs  mod.rs  mutex.rs  runner.rs  task.rs  thread.rs  util.rs
src/sync/: mod.rs  mutex.rs
src/system/: mod.rs
