[package]
name = "ceros"
version = "0.1.0"
edition = "2021"
build = "build/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version="0.2", features=[] }


[build-dependencies]
bindgen = "0.59.2"
anyhow = "1.0.0"
dirs = "4.0.0"
fs_extra = "1.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
