[package]
name = "vexrs"
version = "0.1.0"
edition = "2021"
build = "build/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version="0.2", features=[] }
newlib-alloc = { version = "0.1.0" }
lazy_static = { version = "1.4.0", features=["spin_no_std"] }
acid_io = { git = "ssh://git@github.com/Culpeper-Robotics/acid_io.git" }
vexrs-serial = { git = "ssh://git@github.com/vexrs-os/vexrs-serial" }

[build-dependencies]
bindgen = "0.59.2"
anyhow = "1.0.0"
dirs = "4.0.0"
fs_extra = "1.2.0"

[profile.dev]
panic = "abort"


[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true