[package]
name = "vexrs"
version = "0.1.0"
edition = "2021"
build = "build/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_memory_allocator = "0.1.7"
cty = "0.2.2"
vexrs-serial = { git = "ssh://git@github.com/vexrs/vexrs-serial", default-features = false, features = ["use_acid_io"] }


[build-dependencies]
bindgen = "0.59.2"
anyhow = "1.0.0"
dirs = "4.0.0"
fs_extra = "1.2.0"

[profile.dev]
panic = "abort"


[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = false